--- a/05-A-Z/39_loops.html
+++ b/05-A-Z/39_loops.html
@@ -10,7 +10,7 @@
 <body>
     <script>
         for (var i = 1; i < 10; i++) {
-            console.log(`I'm pradeep kumar and my fucker friend is bala ${i} times `)
+            console.log(`I'm pradeep kumar. My friend is  ${i} times `)
         }
 
         // looping arrays
@@ -35,7 +35,6 @@
 
         }
 
-
         // break example
 
         for (let i = 0; i < data.length; i++) {
@@ -44,7 +43,6 @@
 
         }
 
-
         // loops from backward
 
         let info = ["pradeep", "kumar", 495, true, [1, 2, 3]];
@@ -52,7 +50,6 @@
         for (var i = info.length - 1; i >= 0; i--) {
             console.log(info[i], i)
         }
-
 
         // loops inside loops called nested loops
 
@@ -64,7 +61,6 @@
         }
 
     </script>
-
 </body>
 
 </html>
