--- a/04_react-fundamentals/pure-react.html
+++ b/04_react-fundamentals/pure-react.html
@@ -8,7 +8,7 @@
         // core react library 
     </script> 
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-        // react dom basically a rendering layer which can layer react component into dom. Since we want to render in the browser,
+        // react dom basically a rendering layer which can rendor react component into dom. Since we want to render in the browser,
         // we need to use react dom
     </script>
     <title>Pure React</title>
