--- a/03_datastructures-and-algorithms/destructring-arrays.html
+++ b/03_datastructures-and-algorithms/destructring-arrays.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
+        'use strict'
+
+        // The purpose of 'use strict' is indicate that the code should be execucated in strict mode
+        // example
+        // x = 3.14          it throws error
+        // because we didn't declare the varible
+
+
+        // array destructructing
+
+        //unpacking the arrays or objects into a bunch of variables is called array destructing or object destructing.
+
+        let resturant = {
+            name: "chasers",
+            location: "Uppal, Hyderabad, India",
+            catagerios: ["veg", "Non-veg", "oragnaic", "italian"],
+            starterMenu: ["salad", "chicken", "mutton", "fish", "pulav"],
+            mainMenu: ["pizza", "pasta"]
+        }
+
+
+
+
+
+
+
+
+
+
         
     </script>
 </body>
+
 </html>
