--- a/03_datastructures-and-algorithms/destructing-objects.html
+++ b/03_datastructures-and-algorithms/destructing-objects.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destructing Objects</title>
 </head>
+
 <body>
     <script>
         let resturant = {
@@ -21,8 +23,49 @@
             swiggy: function (person, id) {
                 return [this.starterMenu[person], this.mainMenu[id]];
             },
-            
+
+            openingHours: {
+                mon: {
+                    open: 11,
+                    close: 22
+                },
+                tues: {
+                    open: 9,
+                    close: 21,
+                },
+                wed: {
+                    open: 10,
+                    close: 23
+                },
+                sat: {
+                    open: 0,
+                    close: 24
+                },
+                sun: {
+                    open: 5,
+                    close: 8
+                }
+            },
         };
+
+
+        // object desturcting
+        // unpacking objects or arrays in a bunch of variable is called object destructing / array destructing.
+
+        
+
+
+
+
+
+
+
+
+
+
+
+
     </script>
 </body>
+
 </html>
