--- a/05-A-Z/23_destructing_arrays.html
+++ b/05-A-Z/23_destructing_arrays.html
@@ -16,8 +16,8 @@
         console.log(data);
 
         const resturant = {
-            name: 'baymont',
-            location: '1811 faytee ave',
+            name: 'chasers',
+            location: '1811 uppal hyderabad',
             categories: ['indian', 'italian', 'bengali', 'nodia', 'french'],
             starterMenu: ['chickentikka', 'garlic fry', 'mutton fry'],
             mainMenu: ['pizza', 'pasta', 'bread', 'egg', 'mutton briyani'],
