--- a/06_JS/complete_js.html
+++ b/06_JS/complete_js.html
@@ -158,7 +158,43 @@
             friend: "pramod reddy"
         };
 
+        console.log(data);
         console.table(data);
+
+        //  How to learn a code
+
+        // clear goal(Techonologies)
+
+        // Don't copy the code without knowing. Understand the code. Always type the code (Remember the syntax)
+
+        // work on the challenges.
+
+        // practice the code outside of the platform(code wars, Edabit, leet code)
+
+        // Don't compare with other develoeprs
+
+
+        // solving problems
+
+        // divide and conquer policy ----- breaking a big problems into smallar tasks or problems
+
+        // researching  (mdn, stack overflow, google)
+
+        // For bigger problems write Pseduocode before writting the actual code.
+
+
+
+        /*
+            debugging the code
+
+
+
+
+
+
+        */
+
+
 
 
 
