--- a/06_JS/complete_js.html
+++ b/06_JS/complete_js.html
@@ -187,8 +187,21 @@
         /*
             debugging the code
 
+            A bug is a defect or problem in a program.
+
+            debugging is esentially finding and fixing and then preventing the bugs
+
+            steps
+
+            identify - during development
+            find - developer console
+            fix - replace wrong solution with new solution
+            prevent - writing unit test cases
+
+        */
 
 
+        /*
 
 
 
